# libjaguar

./: .gitignore  CMakeLists.txt  Makefile  README  canutil.c  libjaguar.c  libjaguar.h  notes.md  package.xml  prof.csv  profile.c  profiler  test.c
include/: can.h  canutil.h  libjaguar.h
jagpy/: libjaguar.py  profile.pickle  profile_analysis.ipynb  profile_step.pickle  profiler_quasistatic.py  profiler_step.py  test.py  test2.py
src/: canutil.c  libjaguar.c  profile.c  test.c
