<?xml version="1.0"?>
<package format="3">
  <name>libjaguar</name>
  <version>1.0.0</version>
  <description>
	  libJaguar provides functions for interfacing with the TI/Luminary Micro Jaguar (MDL-BDC) motor controller.
  </description>
  <license>MIT</license>
  <maintainer email="sailzforjunkmailz@gmail.com">Nifley Snifley</maintainer>

  <author email="sailzforjunkmailz@gmail.com">Nifley Snifley</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
